--- a/Grupp8.html
+++ b/Grupp8.html
@@ -9,7 +9,7 @@
 <body>
     <ul>        
 
-        <li><a href="origin/Gustav-Skogström/GustavSkogström.html">GustavSkogström   </a></li>
+        <li><a href="GustavSkogstrom.html">GustavSkogström   </a></li>
         <li><a href="OlofTestIgen.html">Olof   </a></li>
         <li><a href="Ivanladan.html">Ivanladan   </a></li>
         <li><a href="Martin-fil.html">martin   </a></li>
