--- a/Martin-fil.html
+++ b/Martin-fil.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Martin Kristensen</h1>
-<img src="C:\Users\Domestic\Desktop\Pink-panter.jpg" alt="Girl in a jacket">
+<img src="Pink-panter.jpg"
 
 <ul>
     <li>Cykla</li>
