--- a/GustavSkogstrom.html
+++ b/GustavSkogstrom.html
@@ -5,23 +5,13 @@
     Gustav Skogström
 
 </h1>
-<p>
-
-    Jag tycker om Värnamo för att det är en händelserik stad, eftersom vi har så många butiker, marknader, event. Marknads staden Värnamo har varit en samlings plats och träff punkt för människor i mer än hundra år.
-
-</p>
 
 <img src="Varnamo.jpg"> 
 
-<p>
-
-    Jag har under en längre tid varit intresserad av programmering. Eftersom jag gick Ekonomiprogrammet på gymnasiet, där de inte ingick någon programmering, har jag lärt mig att programmera från Codecademy.
-
-</p>
 <ul>
     <li>Motorcyklar</li>
     <li>Spel</li>
-    <li>Musik</li>
+    <li>Kaffe</li>
     <li>Mat</li>
     <li>Resor</li>
 </ul>
